--- a/public/index.html
+++ b/public/index.html
@@ -32,6 +32,8 @@
 .typing-indicator span:nth-child(2){animation-delay:0.2s}
 .typing-indicator span:nth-child(3){animation-delay:0.4s}
 @keyframes typing{0%,60%,100%{transform:translateY(0)}30%{transform:translateY(-4px)}}
+.typing-cursor{color:#a855f7;animation:blink 0.8s infinite}
+@keyframes blink{0%,50%{opacity:1}51%,100%{opacity:0}}
 .ai-message{white-space:pre-wrap}
 .ai-message p{margin-bottom:0.75rem}
 .ai-message ul,.ai-message ol{margin:0.5rem 0;padding-left:1.5rem}
@@ -615,32 +617,80 @@ addMessageToChat('user', message);
 input.value = '';
 isTyping = true;
 document.getElementById('sendBtn').disabled = true;
+document.getElementById('aiStatus').textContent = 'Thinking...';
+document.getElementById('aiStatus').className = 'px-2 py-1 rounded-full text-xs bg-purple-500/20 text-purple-400 animate-pulse';
 
-// Show typing indicator
-const typingId = addTypingIndicator();
+// Create AI message container for streaming
+const container = document.getElementById('chatMessages');
+const messageId = 'ai-msg-' + Date.now();
+container.insertAdjacentHTML('beforeend', `
+<div id="${messageId}" class="flex gap-3">
+<div class="w-8 h-8 rounded-lg bg-gradient-to-br from-purple-500 to-pink-500 flex items-center justify-center flex-shrink-0">
+<svg class="w-4 h-4" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M13 10V3L4 14h7v7l9-11h-7z"/></svg>
+</div>
+<div class="bg-slate-700/50 rounded-xl rounded-tl-none p-4 max-w-2xl">
+<div class="ai-message text-sm" id="${messageId}-content"><span class="typing-cursor">▊</span></div>
+</div>
+</div>
+`);
+container.scrollTop = container.scrollHeight;
+
+let fullText = '';
 
 try {
-const res = await fetch('/ai/chat', {
+const res = await fetch('/ai/chat/stream', {
 method: 'POST',
 headers: {'Content-Type': 'application/json'},
 body: JSON.stringify({ message, apiKey })
 });
 
-const data = await res.json();
-removeTypingIndicator(typingId);
+const reader = res.body.getReader();
+const decoder = new TextDecoder();
 
-if(data.success) {
-addMessageToChat('assistant', data.message);
-} else {
-addMessageToChat('assistant', '❌ Error: ' + (data.error || 'Failed to get response'));
+while(true) {
+const {value, done} = await reader.read();
+if(done) break;
+
+const chunk = decoder.decode(value);
+const lines = chunk.split('\n');
+
+for(const line of lines) {
+if(line.startsWith('data: ')) {
+try {
+const data = JSON.parse(line.slice(6));
+if(data.type === 'chunk' && data.text) {
+fullText += data.text;
+const contentEl = document.getElementById(`${messageId}-content`);
+if(contentEl) {
+contentEl.innerHTML = marked.parse(fullText) + '<span class="typing-cursor animate-pulse">▊</span>';
+container.scrollTop = container.scrollHeight;
+}
+} else if(data.type === 'done') {
+const contentEl = document.getElementById(`${messageId}-content`);
+if(contentEl) {
+contentEl.innerHTML = marked.parse(fullText);
+}
+} else if(data.type === 'error') {
+const contentEl = document.getElementById(`${messageId}-content`);
+if(contentEl) {
+contentEl.innerHTML = '❌ Error: ' + data.error;
+}
+}
+} catch(e) {}
+}
+}
 }
 } catch(e) {
-removeTypingIndicator(typingId);
-addMessageToChat('assistant', '❌ Error: Could not connect to AI service');
+const contentEl = document.getElementById(`${messageId}-content`);
+if(contentEl) {
+contentEl.innerHTML = '❌ Error: Could not connect to AI service. ' + e.message;
+}
 }
 
 isTyping = false;
 document.getElementById('sendBtn').disabled = false;
+document.getElementById('aiStatus').textContent = 'Ready';
+document.getElementById('aiStatus').className = 'px-2 py-1 rounded-full text-xs bg-emerald-500/20 text-emerald-400';
 }
 
 function addMessageToChat(role, content) {
