--- a/public/index.html
+++ b/public/index.html
@@ -527,13 +527,51 @@ Run AI Campaign Automation
 
 <div class="bg-slate-800/60 border border-slate-700/50 rounded-xl p-6 mb-6">
 <div class="flex items-center gap-3 mb-4">
+<div class="w-10 h-10 rounded-xl bg-gradient-to-br from-orange-500 to-red-500 flex items-center justify-center">
+<svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"/></svg>
+</div>
+<div>
+<h3 class="font-semibold">SEMrush API</h3>
+<p class="text-xs text-slate-400">Premium competitor research & keyword data</p>
+</div>
+<span class="ml-auto px-2 py-1 rounded text-xs bg-orange-500/20 text-orange-400">Recommended</span>
+</div>
+<div class="space-y-4">
+<div>
+<label class="text-sm text-slate-400 block mb-2">SEMrush API Key</label>
+<div class="flex gap-2">
+<input type="password" id="semrushApiKey" placeholder="Enter your SEMrush API key" class="flex-1 px-4 py-2.5 rounded-lg text-sm bg-slate-700 border border-slate-600 focus:outline-none focus:border-orange-500">
+<button onclick="saveSemrushKey()" class="px-5 py-2.5 rounded-lg text-sm font-medium bg-gradient-to-r from-orange-500 to-red-600 hover:from-orange-600 hover:to-red-700 transition-all">Save</button>
+</div>
+</div>
+<div class="p-3 rounded-lg bg-orange-500/10 border border-orange-500/30">
+<p class="text-xs text-orange-400 font-medium mb-1">📍 Where to find your API key:</p>
+<p class="text-xs text-slate-400">SEMrush Dashboard → Settings → Subscription Info → API Key</p>
+<p class="text-xs text-slate-400 mt-1">Or visit: <a href="https://www.semrush.com/accounts/profile/subscription" target="_blank" class="text-orange-400 hover:underline">semrush.com/accounts/profile/subscription</a></p>
+</div>
+<div class="p-3 rounded-lg bg-slate-700/50">
+<p class="text-xs text-slate-400 mb-2">SEMrush API Features:</p>
+<ul class="text-xs text-slate-300 space-y-1">
+<li>✓ Competitor paid keywords with positions</li>
+<li>✓ Competitor ad copies</li>
+<li>✓ Related keyword suggestions</li>
+<li>✓ Search volume, CPC, competition data</li>
+<li>✓ Advertising competitors list</li>
+</ul>
+</div>
+</div>
+</div>
+
+<div class="bg-slate-800/60 border border-slate-700/50 rounded-xl p-6 mb-6">
+<div class="flex items-center gap-3 mb-4">
 <div class="w-10 h-10 rounded-xl bg-gradient-to-br from-blue-500 to-cyan-500 flex items-center justify-center">
 <svg class="w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M21 21l-6-6m2-5a7 7 0 11-14 0 7 7 0 0114 0z"/></svg>
 </div>
 <div>
 <h3 class="font-semibold">DataForSEO API</h3>
-<p class="text-xs text-slate-400">Required for competitor research & keyword discovery</p>
+<p class="text-xs text-slate-400">Alternative research data provider</p>
 </div>
+<span class="ml-auto px-2 py-1 rounded text-xs bg-slate-500/20 text-slate-400">Optional</span>
 </div>
 <div class="space-y-4">
 <div>
@@ -548,8 +586,7 @@ Run AI Campaign Automation
 </div>
 </div>
 <div class="p-3 rounded-lg bg-blue-500/10 border border-blue-500/30">
-<p class="text-xs text-blue-400 font-medium mb-1">🎁 Get Started Free</p>
-<p class="text-xs text-slate-400">DataForSEO offers $1 free credit to start. Sign up at <a href="https://dataforseo.com" target="_blank" class="text-blue-400 hover:underline">dataforseo.com</a></p>
+<p class="text-xs text-blue-400">🎁 Get $1 free credit at <a href="https://dataforseo.com" target="_blank" class="underline">dataforseo.com</a></p>
 </div>
 </div>
 </div>
@@ -913,8 +950,19 @@ if(keyword) {showPage('ai-assistant');quickPrompt(`Find 15 keyword ideas for "${
 }
 
 // ═══════════════════════════════════════════════════════════
-// SETTINGS - DataForSEO
+// SETTINGS - SEMrush & DataForSEO
 // ═══════════════════════════════════════════════════════════
+function saveSemrushKey() {
+const key = document.getElementById('semrushApiKey').value.trim();
+if(key) {
+setApiKey('semrush', key);
+showAlert('SEMrush API key saved!', 'success');
+checkResearchApiStatus();
+} else {
+showAlert('Please enter your SEMrush API key', 'error');
+}
+}
+
 function saveDataforseoKey() {
 const login = document.getElementById('dataforseoLogin').value.trim();
 const password = document.getElementById('dataforseoPassword').value.trim();
@@ -928,13 +976,38 @@ showAlert('Please enter both login and password', 'error');
 }
 
 function checkResearchApiStatus() {
+const semrush = getApiKey('semrush');
 const dataforseo = getApiKey('dataforseo');
 const banner = document.getElementById('researchApiBanner');
 if(banner) {
-if(dataforseo) {
-banner.classList.add('hidden');
+if(semrush || dataforseo) {
+banner.innerHTML = `
+<div class="flex items-center justify-between">
+<div class="flex items-center gap-3">
+<svg class="w-6 h-6 text-emerald-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 12l2 2 4-4m6 2a9 9 0 11-18 0 9 9 0 0118 0z"/></svg>
+<div>
+<p class="font-medium text-emerald-400">Research API Connected</p>
+<p class="text-sm text-slate-400">Using ${semrush ? 'SEMrush' : 'DataForSEO'} for competitor research</p>
+</div>
+</div>
+<span class="px-3 py-1 rounded-full text-xs bg-emerald-500/20 text-emerald-400">${semrush ? 'SEMrush' : 'DataForSEO'}</span>
+</div>
+`;
+banner.className = 'mb-6 p-4 rounded-xl bg-emerald-500/10 border border-emerald-500/30';
 } else {
-banner.classList.remove('hidden');
+banner.innerHTML = `
+<div class="flex items-center justify-between">
+<div class="flex items-center gap-3">
+<svg class="w-6 h-6 text-amber-400" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-3L13.732 4c-.77-1.333-2.694-1.333-3.464 0L3.34 16c-.77 1.333.192 3 1.732 3z"/></svg>
+<div>
+<p class="font-medium text-amber-400">Research API Not Configured</p>
+<p class="text-sm text-slate-400">Add SEMrush API key in Settings to unlock competitor research</p>
+</div>
+</div>
+<button onclick="showPage('settings')" class="px-4 py-2 rounded-lg text-sm font-medium bg-amber-500 text-black hover:bg-amber-400">Configure</button>
+</div>
+`;
+banner.className = 'mb-6 p-4 rounded-xl bg-amber-500/10 border border-amber-500/30';
 }
 }
 }
@@ -956,7 +1029,8 @@ return;
 }
 
 const claudeApiKey = getApiKey('claude');
-const researchApiKey = getApiKey('dataforseo');
+const semrushApiKey = getApiKey('semrush');
+const dataforseoApiKey = getApiKey('dataforseo');
 
 if(!claudeApiKey) {
 showAlert('Please add your Claude API key in Settings', 'error');
@@ -964,8 +1038,12 @@ showPage('settings');
 return;
 }
 
+// Check for research API - prefer SEMrush
+const researchApiKey = semrushApiKey || dataforseoApiKey;
+const researchProvider = semrushApiKey ? 'semrush' : 'dataforseo';
+
 if(!researchApiKey) {
-showAlert('Please add your DataForSEO credentials in Settings', 'error');
+showAlert('Please add your SEMrush API key in Settings', 'error');
 showPage('settings');
 return;
 }
@@ -974,7 +1052,7 @@ return;
 document.getElementById('automationProgress').classList.remove('hidden');
 document.getElementById('automationResults').classList.add('hidden');
 document.getElementById('runAutomationBtn').disabled = true;
-document.getElementById('runAutomationBtn').innerHTML = '<svg class="w-5 h-5 animate-spin" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15"/></svg> Running...';
+document.getElementById('runAutomationBtn').innerHTML = '<svg class="w-5 h-5 animate-spin" fill="none" stroke="currentColor" viewBox="0 0 24 24"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 4v5h.582m15.356 2A8.001 8.001 0 004.582 9m0 0H9m11 11v-5h-.581m0 0a8.003 8.003 0 01-15.357-2m15.357 2H15"/></svg> Running with ' + (researchProvider === 'semrush' ? 'SEMrush' : 'DataForSEO') + '...';
 
 const stepsContainer = document.getElementById('automationSteps');
 stepsContainer.innerHTML = '';
@@ -990,7 +1068,7 @@ targetLocation,
 maxCpc: parseFloat(maxCpc),
 claudeApiKey,
 researchApiKey,
-researchProvider: 'dataforseo'
+researchProvider
 })
 });
 
@@ -1132,38 +1210,42 @@ async function spyCompetitorKeywords() {
 const domain = document.getElementById('spyCompetitorDomain').value.trim();
 if(!domain) return showAlert('Enter a domain', 'error');
 
-const researchApiKey = getApiKey('dataforseo');
-if(!researchApiKey) return showAlert('Add DataForSEO credentials in Settings', 'error');
+const semrushApiKey = getApiKey('semrush');
+const dataforseoApiKey = getApiKey('dataforseo');
+const researchApiKey = semrushApiKey || dataforseoApiKey;
+const researchProvider = semrushApiKey ? 'semrush' : 'dataforseo';
+
+if(!researchApiKey) return showAlert('Add SEMrush API key in Settings', 'error');
 
 const container = document.getElementById('spyKeywordsResults');
-container.innerHTML = '<p class="text-sm text-slate-400 animate-pulse">Fetching competitor keywords...</p>';
+container.innerHTML = '<p class="text-sm text-slate-400 animate-pulse">Fetching competitor keywords from ' + (researchProvider === 'semrush' ? 'SEMrush' : 'DataForSEO') + '...</p>';
 
 try {
 const res = await fetch('/automation/competitor/keywords', {
 method: 'POST',
 headers: {'Content-Type': 'application/json'},
-body: JSON.stringify({ domain, researchApiKey, researchProvider: 'dataforseo' })
+body: JSON.stringify({ domain, researchApiKey, researchProvider })
 });
 const data = await res.json();
 
 if(data.success && data.keywords?.length) {
 container.innerHTML = `
-<p class="text-xs text-slate-400 mb-2">Found ${data.totalKeywords} keywords</p>
+<p class="text-xs text-slate-400 mb-2">Found ${data.totalKeywords} paid keywords via ${researchProvider === 'semrush' ? 'SEMrush' : 'DataForSEO'}</p>
 <div class="space-y-1">
-${data.keywords.slice(0, 20).map(k => `
+${data.keywords.slice(0, 25).map(k => `
 <div class="flex items-center justify-between p-2 rounded bg-slate-700/50 text-xs">
-<span class="font-medium">${k.keyword}</span>
+<span class="font-medium truncate max-w-[150px]">${k.keyword}</span>
 <div class="flex gap-3 text-slate-400">
 <span>Vol: ${fmt(k.searchVolume)}</span>
 <span>CPC: $${k.cpc?.toFixed(2)}</span>
-<span>#${k.position}</span>
+<span class="text-blue-400">#${k.position || 'N/A'}</span>
 </div>
 </div>
 `).join('')}
 </div>
 `;
 } else {
-container.innerHTML = '<p class="text-sm text-slate-400">No keywords found or API error</p>';
+container.innerHTML = `<p class="text-sm text-amber-400">No paid keywords found for this domain. ${data.error || ''}</p>`;
 }
 } catch(e) {
 container.innerHTML = `<p class="text-sm text-rose-400">Error: ${e.message}</p>`;
@@ -1174,11 +1256,15 @@ async function findKeywordOpportunities() {
 const seeds = document.getElementById('seedKeywordsInput').value.trim();
 if(!seeds) return showAlert('Enter seed keywords', 'error');
 
-const researchApiKey = getApiKey('dataforseo');
-if(!researchApiKey) return showAlert('Add DataForSEO credentials in Settings', 'error');
+const semrushApiKey = getApiKey('semrush');
+const dataforseoApiKey = getApiKey('dataforseo');
+const researchApiKey = semrushApiKey || dataforseoApiKey;
+const researchProvider = semrushApiKey ? 'semrush' : 'dataforseo';
+
+if(!researchApiKey) return showAlert('Add SEMrush API key in Settings', 'error');
 
 const container = document.getElementById('opportunitiesResults');
-container.innerHTML = '<p class="text-sm text-slate-400 animate-pulse">Finding opportunities...</p>';
+container.innerHTML = '<p class="text-sm text-slate-400 animate-pulse">Finding keyword opportunities via ' + (researchProvider === 'semrush' ? 'SEMrush' : 'DataForSEO') + '...</p>';
 
 try {
 const res = await fetch('/automation/keywords/discover', {
@@ -1188,20 +1274,20 @@ body: JSON.stringify({
 seedKeywords: seeds.split(',').map(s => s.trim()),
 maxCpc: 10,
 researchApiKey, 
-researchProvider: 'dataforseo' 
+researchProvider
 })
 });
 const data = await res.json();
 
 if(data.success && data.keywords?.length) {
 container.innerHTML = `
-<p class="text-xs text-slate-400 mb-2">${data.totalKeywords} opportunities (${data.summary?.easyKeywords} easy wins)</p>
+<p class="text-xs text-slate-400 mb-2">${data.totalKeywords} opportunities found (${data.summary?.easyKeywords || 0} easy wins)</p>
 <div class="space-y-1">
-${data.keywords.slice(0, 20).map(k => `
+${data.keywords.slice(0, 25).map(k => `
 <div class="flex items-center justify-between p-2 rounded bg-slate-700/50 text-xs">
-<div>
-<span class="font-medium">${k.keyword}</span>
-<span class="ml-2 px-1.5 py-0.5 rounded text-[10px] ${k.difficulty === 'Easy' ? 'bg-emerald-500/20 text-emerald-400' : k.difficulty === 'Medium' ? 'bg-amber-500/20 text-amber-400' : 'bg-rose-500/20 text-rose-400'}">${k.difficulty}</span>
+<div class="flex items-center gap-2">
+<span class="font-medium truncate max-w-[140px]">${k.keyword}</span>
+<span class="px-1.5 py-0.5 rounded text-[10px] ${k.difficulty === 'Easy' ? 'bg-emerald-500/20 text-emerald-400' : k.difficulty === 'Medium' ? 'bg-amber-500/20 text-amber-400' : 'bg-rose-500/20 text-rose-400'}">${k.difficulty}</span>
 </div>
 <div class="flex gap-3 text-slate-400">
 <span>Vol: ${fmt(k.searchVolume)}</span>
@@ -1213,7 +1299,7 @@ ${data.keywords.slice(0, 20).map(k => `
 </div>
 `;
 } else {
-container.innerHTML = '<p class="text-sm text-slate-400">No opportunities found</p>';
+container.innerHTML = `<p class="text-sm text-amber-400">No opportunities found. ${data.error || ''}</p>`;
 }
 } catch(e) {
 container.innerHTML = `<p class="text-sm text-rose-400">Error: ${e.message}</p>`;
