--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
 <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
 <link href="https://fonts.googleapis.com/css2?family=Google+Sans:wght@400;500;700&family=Roboto:wght@300;400;500;700&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
+<link rel="stylesheet" href="/css/styles.css">
 <script>
 tailwind.config = {
   theme: {
@@ -72,7 +73,7 @@ input:focus,select:focus,textarea:focus{outline:none;border-color:#60a5fa;box-sh
 <body class="dark-theme">
 <div id="app" class="flex min-h-screen">
 <!-- Sidebar -->
-<aside id="sidebar" class="w-64 bg-white border-r border-gray-200 fixed h-full z-40 flex flex-col">
+<aside id="sidebar" class="sidebar w-64 bg-white border-r border-gray-200 fixed h-full z-40 flex flex-col">
 <!-- Logo -->
 <div class="p-4 border-b border-gray-200">
 <div class="flex items-center gap-3">
@@ -180,9 +181,9 @@ input:focus,select:focus,textarea:focus{outline:none;border-color:#60a5fa;box-sh
 </div>
 </aside>
 <!-- Main Content -->
-<main class="ml-64 flex-1">
+<main class="main-content ml-64 flex-1">
 <!-- Top Header Bar -->
-<header class="sticky top-0 z-30 bg-white border-b border-gray-200 px-6 py-3">
+<header class="header sticky top-0 z-30 bg-white border-b border-gray-200 px-6 py-3">
 <div class="flex items-center justify-between">
 <div class="flex items-center gap-4">
 <h2 id="pageTitle" class="text-xl font-medium text-google-darkgrey">Overview</h2>
